fundings key update from funding

--- a/_data/projects/fr.yml
+++ b/_data/projects/fr.yml
@@ -1319,7 +1319,7 @@ Bonne lecture !"
      credits: 'Catherine Guastavino'
      alt: ""
   collaborators: ""
-  funding: ""
+  fundings: ""
   links: ""
   publications: ""
   contact_info: "Negar Imani, Catherine Guastavino"
