--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ assets/images/.DS_Store
 assets/images/projects/Engaging_professionals/.DS_Store
 assets/images/projects/Fleurs_de_Macadam_sound_art/.DS_Store
 assets/images/projects/Quartier_des_Spectacles/.DS_Store
+assets/images/.DS_Store
