Updated team images

--- a/_data/projects/fr.yml
+++ b/_data/projects/fr.yml
@@ -198,9 +198,9 @@
 - title: "Traduire les échelles d'évaluation des ambiances sonores"
   description: "Projets locaux et mondiaux visant à améliorer la façon dont nous évaluons les ambiances sonores dans différentes langues"
   location: ""
-  date: "2015 – En cours"
+  date: "2015 – 2023"
   start-date: '2015'
-  end-date: 'En cours'
+  end-date: '2023'
   image: "/assets/images/projects/translation/TranslationCCommons.jpeg"
   url: "project5"
   fundings: "SSHRC-PDG grant"
@@ -756,7 +756,7 @@ Bien que nous ne fassions qu'effleurer la complexité des facteurs qui influence
 - title: "L’art sonore dans les espaces publics : Les Madelinéennes"
   description: "Son et patrimoine culturel dans l'espace public : évaluation d'une installation sonore avec la communauté locale"
   location: "Montreal, QC"
-  date: "2023-en cours"
+  date: "2023- En cours"
   start-date: '2023'
   end-date: '2025'
   image: "/assets/images/projects/les_madelinennes/230711_Parc-Madelinots_006.jpg"
