--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ assets/images/projects/Engaging_professionals/.DS_Store
 assets/images/projects/Fleurs_de_Macadam_sound_art/.DS_Store
 assets/images/projects/Quartier_des_Spectacles/.DS_Store
 assets/images/.DS_Store
+.DS_Store
+assets/images/.DS_Store
