--- a/_data/projects/en.yml
+++ b/_data/projects/en.yml
@@ -187,7 +187,7 @@
   location: ""
   date: "2015 – 2023"
   start-date: "2015"
-  end-date: "ongoing"
+  end-date: "2023"
   image: "/assets/images/projects/translation/TranslationCCommons.jpeg"
   url: "project5"
   fundings: "SSHRC-PDG grant"
