Adding proper indentation for each title list

--- a/_data/events/fr.yml
+++ b/_data/events/fr.yml
@@ -1,55 +1,55 @@
-title: "Urban Sound Symposium 2023 – Événement satellite"
-id: "event-1"
-location: "En ligne et hybride (Barcelone, ES)"
-date: "Fév - Avr 2023"
-language: "Anglais uniquement"
-about: "Edda Bild a organisé 'Early-Career Professionals in Sound', avec le soutien des membres de son équipe Sounds in the City, un atelier informel en deux sessions avec des professionnels du son en début de carrière, discutant des défis et des opportunités dans le domaine. Un résumé de ces ateliers a été présenté à la fin du symposium 2023 Urban Sound."
-link: "https://urban-sound-symposium.org/early-careers/"
+- title: "Urban Sound Symposium 2023 – Événement satellite"
+  id: "event-1"
+  location: "En ligne et hybride (Barcelone, ES)"
+  date: "Fév - Avr 2023"
+  language: "Anglais uniquement"
+  about: "Edda Bild a organisé 'Early-Career Professionals in Sound', avec le soutien des membres de son équipe Sounds in the City, un atelier informel en deux sessions avec des professionnels du son en début de carrière, discutant des défis et des opportunités dans le domaine. Un résumé de ces ateliers a été présenté à la fin du symposium 2023 Urban Sound."
+  link: "https://urban-sound-symposium.org/early-careers/"
 
-title: "Symposium sur le son urbain 2023"
-id: "event-2"
-location: "Barcelone (ES)"
-date: "19-21 avril 2023"
-language: "Anglais uniquement"
-about: "Trois membres de Sounds in the City ont donné des conférences à l'occasion de l'USS 2023. Prof. Guastavino et Christopher Trudeau ont donné une conférence sur 'L'inégalité dans l'exposition au bruit urbain', et Dr. Edda Bild a donné une conférence sur 'Living together in urban sound / Sonic cohabitation'."
-link: "https://urban-sound-symposium.org/program/"
+- title: "Symposium sur le son urbain 2023"
+  id: "event-2"
+  location: "Barcelone (ES)"
+  date: "19-21 avril 2023"
+  language: "Anglais uniquement"
+  about: "Trois membres de Sounds in the City ont donné des conférences à l'occasion de l'USS 2023. Prof. Guastavino et Christopher Trudeau ont donné une conférence sur 'L'inégalité dans l'exposition au bruit urbain', et Dr. Edda Bild a donné une conférence sur 'Living together in urban sound / Sonic cohabitation'."
+  link: "https://urban-sound-symposium.org/program/"
 
-title: "Sounds in the City : Séminaire international et atelier au Sound Studies Hub!"
-id: "event-3"
-location: "Venise (IT)"
-date: "13 avril 2023"
-language: "Anglais"
-about: "Edda Bild et le Prof. Guastavino ont été invités par Nicola di Croce, membre de Sounds in the City, à présenter leur travail au centre d'études SSH! à l'Université IUAV de Venise. Les présentations du matin se sont concentrées sur les études récentes à Montréal, suivies d'un atelier l'après-midi sur la 'cohabitation sonore' dans un contexte vénitien."
-link: ""
+- title: "Sounds in the City : Séminaire international et atelier au Sound Studies Hub!"
+  id: "event-3"
+  location: "Venise (IT)"
+  date: "13 avril 2023"
+  language: "Anglais"
+  about: "Edda Bild et le Prof. Guastavino ont été invités par Nicola di Croce, membre de Sounds in the City, à présenter leur travail au centre d'études SSH! à l'Université IUAV de Venise. Les présentations du matin se sont concentrées sur les études récentes à Montréal, suivies d'un atelier l'après-midi sur la 'cohabitation sonore' dans un contexte vénitien."
+  link: ""
 
-title: "City Ditty : Un outil d'interaction avec le paysage sonore pour les non-professionnels du son"
-id: "event-4"
-location: "CIRMMT, Montréal"
-date: "6 février 2023"
-language: "Anglais"
-about: "Richard Yanaky et Prof. Catherine Guastavino ont présenté City Ditty - un outil de planification sonore immersif développé en interne pour les urbanistes et architectes paysagistes, lors de l'atelier sur la focalisation sonore dans les jeux vidéo au CIRMMT."
-link: "https://www.cirmmt.org/en/events/workshops/research/ra1-sound-videogames"
+- title: "City Ditty : Un outil d'interaction avec le paysage sonore pour les non-professionnels du son"
+  id: "event-4"
+  location: "CIRMMT, Montréal"
+  date: "6 février 2023"
+  language: "Anglais"
+  about: "Richard Yanaky et Prof. Catherine Guastavino ont présenté City Ditty - un outil de planification sonore immersif développé en interne pour les urbanistes et architectes paysagistes, lors de l'atelier sur la focalisation sonore dans les jeux vidéo au CIRMMT."
+  link: "https://www.cirmmt.org/en/events/workshops/research/ra1-sound-videogames"
 
-title: "Journées de l'environnement sonore 2022"
-id: "event-5"
-location: "FABRIK8, Montréal"
-date: "15 novembre 2022"
-language: "Français uniquement"
-about: "Edda Bild a présenté les résultats de l'étude 'ÉCOUTEZ MONTRÉAL : AMBIANCES SONORES AU CENTRE-VILLE DE MONTRÉAL' sur les expériences sonores dans le centre-ville de Montréal lors du panel 2 sur l'innovation ('Innover : ouvrir le champ des possibles'). Les JES 2022 ont été organisées par l'Ordre des Urbanistes du Québec."
-link: "https://ouq.qc.ca/wp-content/uploads/2022/03/programme-jes-ouq-2022.pdf"
+- title: "Journées de l'environnement sonore 2022"
+  id: "event-5"
+  location: "FABRIK8, Montréal"
+  date: "15 novembre 2022"
+  language: "Français uniquement"
+  about: "Edda Bild a présenté les résultats de l'étude 'ÉCOUTEZ MONTRÉAL : AMBIANCES SONORES AU CENTRE-VILLE DE MONTRÉAL' sur les expériences sonores dans le centre-ville de Montréal lors du panel 2 sur l'innovation ('Innover : ouvrir le champ des possibles'). Les JES 2022 ont été organisées par l'Ordre des Urbanistes du Québec."
+  link: "https://ouq.qc.ca/wp-content/uploads/2022/03/programme-jes-ouq-2022.pdf"
 
-title: "Le bruit environnemental dans nos actions de planification"
-id: "event-6"
-location: "Esplanade Tranquille, Quartier des Spectacles, Montréal"
-date: "6 octobre 2022"
-language: "Français uniquement"
-about: "Sounds in the City, en collaboration avec la Ville de Montréal et la Direction Régionale de la Santé Publique, a organisé un atelier sur les considérations sonores et le bruit à différentes échelles urbaines."
-link: ""
+- title: "Le bruit environnemental dans nos actions de planification"
+  id: "event-6"
+  location: "Esplanade Tranquille, Quartier des Spectacles, Montréal"
+  date: "6 octobre 2022"
+  language: "Français uniquement"
+  about: "Sounds in the City, en collaboration avec la Ville de Montréal et la Direction Régionale de la Santé Publique, a organisé un atelier sur les considérations sonores et le bruit à différentes échelles urbaines."
+  link: ""
 
-title: "13e congrès de l'ICBEN sur le bruit en tant que problème de santé publique 2021"
-id: "event-7"
-location: "Stockholm (SE) / virtuel"
-date: "14-17 juin 2021"
-language: "Anglais"
-about: "Christopher Trudeau a présenté un exposé intitulé 'L'inégalité environnementale des environnements sonores urbains : une analyse comparative'. Cette présentation s'est concentrée sur les résultats d'études menées en Europe, en Amérique du Nord et à Hong Kong, qui suggèrent que l'exposition au bruit est souvent plus élevée pour les personnes racialisées à faible revenu."
-link: ""
+- title: "13e congrès de l'ICBEN sur le bruit en tant que problème de santé publique 2021"
+  id: "event-7"
+  location: "Stockholm (SE) / virtuel"
+  date: "14-17 juin 2021"
+  language: "Anglais"
+  about: "Christopher Trudeau a présenté un exposé intitulé 'L'inégalité environnementale des environnements sonores urbains : une analyse comparative'. Cette présentation s'est concentrée sur les résultats d'études menées en Europe, en Amérique du Nord et à Hong Kong, qui suggèrent que l'exposition au bruit est souvent plus élevée pour les personnes racialisées à faible revenu."
+  link: ""
