feedback issues updated fr

--- a/_data/projects/en.yml
+++ b/_data/projects/en.yml
@@ -495,7 +495,7 @@
     - url: 'https://nicoladicroce.cargo.site/soninurb'
       name: "Nicole Di Croce website"
   publications:
-    - url: 'https://www.researchgate.net/project/Sonic-inquiry-in-urban-research'
+    - url: 'https://cordis.europa.eu/project/id/881822'
       name: 'Sonic inquiry in urban research'
   prev_url: "project9"
   next_url: 'project11'
